--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "youtube_clone_2.0",
+  "homepage": "https://VaibhavYT.github.io/youtube_clone_2.0",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,9 +24,12 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "vite": "^4.3.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
